# aioia-core

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package.json
.cursor/rules/: arrow-function.mdc  coding-practices.mdc  enum.mdc  tests.mdc
.gemini/: styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: publish-python.yml  publish-typescript.yml  python-ci.yml  typescript-ci.yml
ai_ml/fraud_detection/: Dockerfile  README.md  requirements-lora.txt  requirements.txt
ai_ml/fraud_detection/app/: main.py  pipeline.py  settings.py
ai_ml/fraud_detection/app/api/: routes.py  schemas.py
ai_ml/fraud_detection/app/models/: custom_model.py
ai_ml/fraud_detection/app/services/: ensemble.py  llm_client.py  preprocess_image.py  preprocess_text.py  storage.py
ai_ml/fraud_detection/data_collection/: README.md  collect_kpop_trade.py  collect_kpop_trade_rotating.py  scraper.py  serpapi_rotator.py  serpapi_to_kpopforsale_csv.py
ai_ml/fraud_detection/scripts/: demo_cli.py  download_models.py  eval_custom_model.py  label_cli.py  train_custom_model.py  train_lora.py  weak_label.py
ai_ml/fraud_detection/tests/: test_preprocess.py
python/: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  pyrightconfig.json
python/aioia_core/: __init__.py  auth.py  database.py  errors.py  filters.py  llm.py  managers.py  protocols.py  repositories.py  settings.py  types.py
python/aioia_core/factories/: __init__.py  base_manager_factory.py  base_repository_factory.py
python/aioia_core/fastapi/: base_crud_router.py
python/aioia_core/testing/: __init__.py  crud_fixtures.py
python/tests/unit/: test_base_crud_router.py  test_base_manager.py  test_base_repository.py  test_crud_fixtures.py  test_deprecation.py
reddit-kpop-trade-scraper/: .gitignore  README.md  collect_kpop_trade.py  env.example  requirements.txt
typescript/: .eslintrc.json  .gitignore  .releaserc.json  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
typescript/src/: client.ts  index.ts
typescript/src/__tests__/: BaseCrudRepository.test.ts  errors.test.ts
typescript/src/client/: BaseApiService.ts
typescript/src/components/: LottiePlayer.tsx
typescript/src/errors/: codes.ts  exceptions.ts  index.ts
typescript/src/repositories/: BaseCrudRepository.ts  types.ts
