[tool.poetry]
name = "aioia-core"
version = "0.1.0"
description = "Core infrastructure for AIoIA projects"
authors = ["AIoIA, Inc. <devops@aioia.ai>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["aioia", "infrastructure", "database", "fastapi"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.0"
fastapi = "^0.115.0"
sentry-sdk = "^2.0.0"
pyhumps = "^3.8.0"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
ignore = []
